--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel",
     "jss",
     "css",
-    "less"
+    "less",
+    "sass",
+    "ssss"
   ],
   "repository": {
     "type": "git",
@@ -21,8 +23,10 @@
   "author": "Websecurfiy <contact@websecurify.com>",
   "license": "MIT",
   "dependencies": {
+    "deasync": "^0.1.4",
     "jss-cli": "^2.0.0",
     "less": "^2.5.3",
+    "node-sass": "^3.4.2",
     "require-resolve": "0.0.2"
   }
 }
