--- a/package.json
+++ b/package.json
@@ -20,18 +20,32 @@
   "author": "Websecurfiy <contact@websecurify.com>",
   "license": "MIT",
   "dependencies": {
-    "jss-cli": "^3.0.1",
+    "load-styles": "^2.0.0",
+    "postcss": "^6.0.19",
+    "postcss-icss-selectors": "^2.0.3",
+    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-modules-resolve-imports": "^1.3.0",
+    "postcss-modules-scope": "^1.1.0",
+    "postcss-modules-values": "^1.3.0",
     "require-resolve": "0.0.2"
   },
   "peerDependencies": {
     "babel-generator": "6.x",
     "babel-template": "6.x",
-    "babel-types": "6.x"
+    "babel-types": "6.x",
+    "babel": "6.x"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "babel-eslint": "^8.2.2",
     "babel-generator": "^6.26.1",
     "babel-template": "^6.26.0",
-    "babel-types": "^6.26.0"
+    "babel-types": "^6.26.0",
+    "eslint-plugin-immutable": "^1.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-react": "^7.7.0"
+  },
+  "engines": {
+    "node": ">=8.x"
   }
 }
