--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
   "license": "MIT",
   "dependencies": {
     "load-styles": "^2.0.0",
-    "postcss": "^6.0.19",
     "postcss-icss-selectors": "^2.0.3",
-    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-modules-extract-imports": "^2.0.0",
     "postcss-modules-resolve-imports": "^1.3.0",
-    "postcss-modules-scope": "^1.1.0",
+    "postcss-modules-scope": "^2.1.0",
     "postcss-modules-values": "^1.3.0",
     "require-resolve": "0.0.2"
   },
@@ -34,7 +33,8 @@
     "babel-generator": "6.x",
     "babel-template": "6.x",
     "babel-types": "6.x",
-    "babel": "6.x"
+    "babel": "6.x",
+    "postcss": "7.x.x"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -44,7 +44,8 @@
     "babel-types": "^6.26.0",
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "postcss": "^7.0.16"
   },
   "engines": {
     "node": ">=8.x"
